--- a/main.html
+++ b/main.html
@@ -8,23 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <form>
-      <h2>Feedback Form</h2>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required minlength="3" maxlength="50">
-      <label for="portfolio">Portfolio:</label>
-      <input type="url" id="portfolio" name="portfolio" required>
-      <label for="favColor">Favorite Color:</label>
-      <select id="favColor" name="favColor">
-        <option value="">--Select--</option>
-        <option value="red">Red</option>
-        <option value="green">Green</option>
-        <option value="blue">Blue</option>
-      </select>
-      <label for="likeness">How much do you like this color? (1-100)</label>
-      <input type="range" id="likeness" name="likeness" min="1" max="100" step="1">
-      <input type="submit" value="Submit">
-    </form>
+	<h1>Feedback Form</h1>
+	<form method="post">
+		<label for="name">Name</label><br>
+		<input type="text" id="name" name="name" minlength="3" maxlength="50">
+		<br>
+		<label for="portfolio">Portfolio</label><br>
+		<input type="url" id="portfolio">
+		<br>
+		<label for="favColor">Favorite Color</label><br>
+		<input type="color" id="favColor">
+		<br>
+		<label for="likeness">How much you like color</label><br>
+		<input type="range" min="1" max="100"   id="likeness">
+		<br>
+		<input type="submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
